Added RUS models/results

--- a/_2. Modeling/3. tuned_ROS_models.ipynb
+++ b/_2. Modeling/3. tuned_ROS_models.ipynb
@@ -327,7 +327,7 @@
     "    }\n",
     "\n",
     "    steps = [\n",
-    "        (\"ros\", RandomOverSampler(sampling_strategy='minority', random_state=random_state)),\n",
+    "        (\"ros\", RandomOverSampler(random_state=random_state)),\n",
     "        (\"rf\", RandomForestClassifier(**params, random_state=random_state, verbose=1, n_jobs=-1))\n",
     "    ]\n",
     "\n",
@@ -346,7 +346,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "study = optuna.create_study(study_name='Random Forests Tuned ROS', sampler=TPESampler(seed=random_state))\n",
+    "study = optuna.create_study(direction=\"maximize\", study_name='Random Forests Tuned ROS', sampler=TPESampler(seed=random_state))\n",
     "study.optimize(objective_rf, n_trials=20, show_progress_bar=True)"
    ]
   },
@@ -443,8 +443,8 @@
     "                              eval_set = [(X_val_fold.values, y_val_fold)],\n",
     "                              patience=2,\n",
     "                              max_epochs=4,\n",
-    "                              batch_size=14000,\n",
-    "                              virtual_batch_size=14000,\n",
+    "                              batch_size=44000,\n",
+    "                              virtual_batch_size=44000,\n",
     "                              eval_metric=[\"auc\"]\n",
     "                              )\n",
     "\n",
@@ -504,7 +504,7 @@
     "X_ros, y_ros = ros.fit_resample(X_train, y_train)\n",
     "\n",
     "tabnet_tuned_ros = TabNetClassifier(**tabnet_best_params, seed=random_state, verbose=2, optimizer_params=dict(lr=2e-2, weight_decay=1e-5), n_a=tabnet_best_params[\"n_d\"], device_name=\"cuda\")\n",
-    "tabnet_tuned_ros.fit(X_ros.values, y_ros, max_epochs=4, batch_size=44000, virtual_batch_size=44000) #check batch size"
+    "tabnet_tuned_ros.fit(X_ros.values, y_ros, max_epochs=4, batch_size=44000, virtual_batch_size=44000)"
    ]
   },
   {
