--- a/_2. Modeling/3. tuned_RUS_models.ipynb
+++ b/_2. Modeling/3. tuned_RUS_models.ipynb
@@ -134,7 +134,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "logreg_best_params = study.best_params #\n",
+    "logreg_best_params = study.best_params #{'C': 1.2542721123427765, 'solver': 'sag', 'penalty': None}\n",
     "print(logreg_best_params)"
    ]
   },
@@ -154,7 +154,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"./Images/Tuned models on ROS data/Logistic Regression/Optuna trial optimization history.png\">"
+    "<img src=\"./Images/Tuned models on RUS data/Logistic Regression/Optuna trial optimization history.png\">"
    ]
   },
   {
@@ -235,7 +235,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "xgboost_best_params = study.best_params #\n",
+    "xgboost_best_params = study.best_params #{'n_estimators': 350, 'learning_rate': 0.05, 'max_depth': 16, 'subsample': 0.9951754722614875, 'colsample_bytree': 0.8668977611468552, 'min_child_weight': 8}\n",
     "print(xgboost_best_params)"
    ]
   },
@@ -255,7 +255,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"./Images/Tuned models on ROS data/XGBoost/Optuna trial optimization history.png\">"
+    "<img src=\"./Images/Tuned models on RUS data/XGBoost/Optuna trial optimization history.png\">"
    ]
   },
   {
@@ -303,7 +303,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Tuned Random Forests model on ROS data"
+    "## Tuned Random Forests model on RUS data"
    ]
   },
   {
@@ -321,7 +321,7 @@
     "    }\n",
     "\n",
     "    steps = [\n",
-    "        (\"rus\", RandomUnderSampler(sampling_strategy='minority', random_state=random_state)),\n",
+    "        (\"rus\", RandomUnderSampler(random_state=random_state)),\n",
     "        (\"rf\", RandomForestClassifier(**params, random_state=random_state, verbose=1, n_jobs=-1))\n",
     "    ]\n",
     "\n",
@@ -340,7 +340,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "study = optuna.create_study(study_name='Random Forests Tuned RUS', sampler=TPESampler(seed=random_state))\n",
+    "study = optuna.create_study(direction='maximize', study_name='Random Forests Tuned RUS', sampler=TPESampler(seed=random_state))\n",
     "study.optimize(objective_rf, n_trials=20, show_progress_bar=True)"
    ]
   },
@@ -370,7 +370,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"./Images/Tuned models on ROS data/Random Forests/Optuna trial optimization history.png\">"
+    "<img src=\"./Images/Tuned models on RUS data/Random Forests/Optuna trial optimization history.png\">"
    ]
   },
   {
@@ -400,7 +400,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Tuned TabNet model on ROS data"
+    "## Tuned TabNet model on RUS data"
    ]
   },
   {
@@ -437,8 +437,8 @@
     "                              eval_set = [(X_val_fold.values, y_val_fold)],\n",
     "                              patience=2,\n",
     "                              max_epochs=4,\n",
-    "                              batch_size=14000,\n",
-    "                              virtual_batch_size=14000,\n",
+    "                              batch_size=44000,\n",
+    "                              virtual_batch_size=44000,\n",
     "                              eval_metric=[\"auc\"]\n",
     "                              )\n",
     "\n",
@@ -465,7 +465,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tabnet_best_params = study.best_params #\n",
+    "tabnet_best_params = study.best_params #{'n_d': 64, 'n_steps': 2, 'gamma': 1.4, 'n_shared': 5, 'lambda_sparse': 1e-06}\n",
     "print(tabnet_best_params)"
    ]
   },
@@ -485,7 +485,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"./Images/Tuned models on ROS data/TabNet/Optuna trial optimization history.png\">"
+    "<img src=\"./Images/Tuned models on RUS data/TabNet/Optuna trial optimization history.png\">"
    ]
   },
   {
@@ -498,7 +498,7 @@
     "X_rus, y_rus = rus.fit_resample(X_train, y_train)\n",
     "\n",
     "tabnet_tuned_rus = TabNetClassifier(**tabnet_best_params, seed=random_state, verbose=2, optimizer_params=dict(lr=2e-2, weight_decay=1e-5), n_a=tabnet_best_params[\"n_d\"], device_name=\"cuda\")\n",
-    "tabnet_tuned_rus.fit(X_rus.values, y_rus, max_epochs=4, batch_size=44000, virtual_batch_size=44000) #check batch size"
+    "tabnet_tuned_rus.fit(X_rus.values, y_rus, max_epochs=4, batch_size=44000, virtual_batch_size=44000)"
    ]
   },
   {
