--- a/_2. Modeling/3. tuned_SMOTE-ENN_models.ipynb
+++ b/_2. Modeling/3. tuned_SMOTE-ENN_models.ipynb
@@ -19,7 +19,7 @@
     "import optuna\n",
     "from optuna import Trial, visualization\n",
     "from optuna.samplers import TPESampler\n",
-    "from imblearn.combine import SMOTEENN\n",
+    "from imblearn.combine import SMOTEENN, SMOTETomek\n",
     "from imblearn.pipeline import Pipeline\n",
     "\n",
     "random_state = 101\n",
@@ -311,7 +311,7 @@
     "    }\n",
     "\n",
     "    steps = [\n",
-    "        (\"smoteenn\", SMOTEENN(random_state=random_state, n_jobs=-1)),\n",
+    "        (\"smotetomek\", SMOTETomek(random_state=random_state, n_jobs=-1)),\n",
     "        (\"rf\", RandomForestClassifier(**params, random_state=random_state, verbose=1, n_jobs=-1))\n",
     "    ]\n",
     "\n",
@@ -330,7 +330,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "study = optuna.create_study(direction='maximize', study_name='Random Forests Tuned SMOTE-ENN', sampler=TPESampler(seed=random_state))\n",
+    "study = optuna.create_study(direction='maximize', study_name='Random Forests Tuned SMOTE-Tomek', sampler=TPESampler(seed=random_state))\n",
     "study.optimize(objective_rf, n_trials=20, show_progress_bar=True)"
    ]
   },
