--- a/_2. Modeling/3. tuned_ROS+RUS_models.ipynb
+++ b/_2. Modeling/3. tuned_ROS+RUS_models.ipynb
@@ -19,6 +19,7 @@
     "import optuna\n",
     "from optuna import Trial, visualization\n",
     "from optuna.samplers import TPESampler\n",
+    "from imblearn.over_sampling import RandomOverSampler\n",
     "from imblearn.under_sampling import RandomUnderSampler\n",
     "from imblearn.pipeline import Pipeline\n",
     "\n",
@@ -88,7 +89,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Tuned Logistic Regression model on RUS data"
+    "## Tuned Logistic Regression model on ROS+RUS data"
    ]
   },
   {
@@ -97,6 +98,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# https://machinelearningmastery.com/combine-oversampling-and-undersampling-for-imbalanced-classification/\n",
+    "# Manual combination of Over- and Undersampling inspired by above article\n",
+    "# (Brownlee, 2022)\n",
+    "# Repeated for all other models\n",
+    "\n",
     "def objective_lr(trial):\n",
     "    params = {\n",
     "        \"C\": trial.suggest_float(\"C\", 0.001, 1000.0, log=True), #log=True helps to search a large range efficiently with fewer trials\n",
@@ -105,6 +111,7 @@
     "    }\n",
     "\n",
     "    steps = [\n",
+    "        (\"ros\", RandomOverSampler(random_state=random_state)),\n",
     "        (\"rus\", RandomUnderSampler(random_state=random_state)),\n",
     "        (\"logreg\", LogisticRegression(**params, random_state=random_state, n_jobs=-1, verbose=2))\n",
     "    ]\n",
@@ -124,7 +131,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "study = optuna.create_study(direction='maximize', study_name='Logistic Regression Tuned RUS', sampler=TPESampler(seed=random_state))\n",
+    "study = optuna.create_study(direction='maximize', study_name='Logistic Regression Tuned ROS+RUS', sampler=TPESampler(seed=random_state))\n",
     "study.optimize(objective_lr, n_trials=20, show_progress_bar=True)"
    ]
   },
@@ -134,7 +141,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "logreg_best_params = study.best_params #{'C': 1.2542721123427765, 'solver': 'sag', 'penalty': None}\n",
+    "logreg_best_params = study.best_params #{'C': 0.012341115473953784, 'solver': 'saga', 'penalty': None}\n",
     "print(logreg_best_params)"
    ]
   },
@@ -154,7 +161,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"./Images/Tuned models on RUS data/Logistic Regression/Optuna trial optimization history.png\">"
+    "<img src=\"./Images/Tuned models on ROSRUS data/Logistic Regression/Optuna trial optimization history.png\">"
    ]
   },
   {
@@ -163,11 +170,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rus = RandomUnderSampler(random_state=random_state)\n",
-    "X_rus, y_rus = rus.fit_resample(X_train, y_train)\n",
+    "rosrus_pipeline = Pipeline(\n",
+    "    [\n",
+    "        (\"ros\", RandomOverSampler(random_state=random_state)),\n",
+    "        (\"rus\", RandomUnderSampler(random_state=random_state))\n",
+    "    ]\n",
+    ")\n",
     "\n",
-    "tuned_lr_rus = LogisticRegression(**logreg_best_params, random_state=random_state, n_jobs=-1, verbose=2)\n",
-    "tuned_lr_rus.fit(X_rus, y_rus)"
+    "X_rosrus, y_rosrus = rosrus_pipeline.fit_resample(X_train, y_train)\n",
+    "tuned_lr_rosrus = LogisticRegression(**logreg_best_params, random_state=random_state, n_jobs=-1, verbose=2)\n",
+    "tuned_lr_rosrus.fit(X_rosrus, y_rosrus)"
    ]
   },
   {
@@ -176,15 +188,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "joblib.dump(study, 'study_lr_tuned_rus.pkl')\n",
-    "joblib.dump(tuned_lr_rus, 'logreg_tuned_RUS.joblib')"
+    "joblib.dump(study, 'study_lr_tuned_rosrus.pkl')\n",
+    "joblib.dump(tuned_lr_rosrus, 'logreg_tuned_ROSRUS.joblib')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Tuned XGBoost model on RUS data"
+    "## Tuned XGBoost model on ROS+RUS data"
    ]
   },
   {
@@ -206,6 +218,7 @@
     "    }\n",
     "\n",
     "    steps = [\n",
+    "        (\"ros\", RandomOverSampler(random_state=random_state)),\n",
     "        (\"rus\", RandomUnderSampler(random_state=random_state)),\n",
     "        (\"xgb\", xgb.XGBClassifier(**params, random_state=random_state, n_jobs=-1, verbosity=1, device=\"cuda\"))\n",
     "    ]\n",
@@ -225,7 +238,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "study = optuna.create_study(direction='maximize', study_name='XGBoost Tuned RUS', sampler=TPESampler(seed=random_state))\n",
+    "study = optuna.create_study(direction='maximize', study_name='XGBoost Tuned ROS+RUS', sampler=TPESampler(seed=random_state))\n",
     "study.optimize(objective_xgboost, n_trials=20, show_progress_bar=True)"
    ]
   },
@@ -235,7 +248,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "xgboost_best_params = study.best_params #{'n_estimators': 350, 'learning_rate': 0.05, 'max_depth': 16, 'subsample': 0.9951754722614875, 'colsample_bytree': 0.8668977611468552, 'min_child_weight': 8}\n",
+    "xgboost_best_params = study.best_params #\n",
     "print(xgboost_best_params)"
    ]
   },
@@ -255,7 +268,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"./Images/Tuned models on RUS data/XGBoost/Optuna trial optimization history.png\">"
+    "<img src=\"./Images/Tuned models on ROSRUS data/XGBoost/Optuna trial optimization history.png\">"
    ]
   },
   {
@@ -264,11 +277,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rus = RandomUnderSampler(random_state=random_state)\n",
-    "X_rus, y_rus = rus.fit_resample(X_train, y_train)\n",
+    "rosrus_pipeline = Pipeline(\n",
+    "    [\n",
+    "        (\"ros\", RandomOverSampler(random_state=random_state)),\n",
+    "        (\"rus\", RandomUnderSampler(random_state=random_state))\n",
+    "    ]\n",
+    ")\n",
     "\n",
-    "tuned_xgb_rus = xgb.XGBClassifier(**xgboost_best_params, random_state=random_state, n_jobs=-1, verbosity=2, device=\"cuda\")\n",
-    "tuned_xgb_rus.fit(X_rus, y_rus)"
+    "X_rosrus, y_rosrus = rosrus_pipeline.fit_resample(X_train, y_train)\n",
+    "tuned_xgb_rosrus = xgb.XGBClassifier(**xgboost_best_params, random_state=random_state, n_jobs=-1, verbosity=2, device=\"cuda\")\n",
+    "tuned_xgb_rosrus.fit(X_rosrus, y_rosrus)"
    ]
   },
   {
@@ -277,15 +295,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "joblib.dump(study, 'study_xgb_tuned_rus.pkl')\n",
-    "joblib.dump(tuned_xgb_rus, 'XGBoost_tuned_RUS.joblib')"
+    "joblib.dump(study, 'study_xgb_tuned_rosrus.pkl')\n",
+    "joblib.dump(tuned_xgb_rosrus, 'XGBoost_tuned_ROSRUS.joblib')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Tuned Random Forests model on RUS data"
+    "## Tuned Random Forests model on ROS+RUS data"
    ]
   },
   {
@@ -303,6 +321,7 @@
     "    }\n",
     "\n",
     "    steps = [\n",
+    "        (\"ros\", RandomOverSampler(random_state=random_state)),\n",
     "        (\"rus\", RandomUnderSampler(random_state=random_state)),\n",
     "        (\"rf\", RandomForestClassifier(**params, random_state=random_state, verbose=1, n_jobs=-1))\n",
     "    ]\n",
@@ -322,7 +341,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "study = optuna.create_study(direction='maximize', study_name='Random Forests Tuned RUS', sampler=TPESampler(seed=random_state))\n",
+    "study = optuna.create_study(direction='maximize', study_name='Random Forests Tuned ROS+RUS', sampler=TPESampler(seed=random_state))\n",
     "study.optimize(objective_rf, n_trials=20, show_progress_bar=True)"
    ]
   },
@@ -332,7 +351,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rf_best_params = study.best_params #{'max_depth': 20, 'min_samples_leaf': 8, 'min_samples_split': 4, 'n_estimators': 300}\n",
+    "rf_best_params = study.best_params #\n",
     "print(rf_best_params)"
    ]
   },
@@ -352,7 +371,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"./Images/Tuned models on RUS data/Random Forests/Optuna trial optimization history.png\">"
+    "<img src=\"./Images/Tuned models on ROSRUS data/Random Forests/Optuna trial optimization history.png\">"
    ]
   },
   {
@@ -361,11 +380,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rus = RandomUnderSampler(random_state=random_state)\n",
-    "X_rus, y_rus = rus.fit_resample(X_train, y_train)\n",
+    "rosrus_pipeline = Pipeline(\n",
+    "    [\n",
+    "        (\"ros\", RandomOverSampler(random_state=random_state)),\n",
+    "        (\"rus\", RandomUnderSampler(random_state=random_state))\n",
+    "    ]\n",
+    ")\n",
     "\n",
-    "tuned_rf_rus = RandomForestClassifier(**rf_best_params, random_state=random_state, verbose=1, n_jobs=-1)\n",
-    "tuned_rf_rus.fit(X_rus, y_rus)"
+    "X_rosrus, y_rosrus = rosrus_pipeline.fit_resample(X_train, y_train)\n",
+    "tuned_rf_rosrus = RandomForestClassifier(**rf_best_params, random_state=random_state, verbose=1, n_jobs=-1)\n",
+    "tuned_rf_rosrus.fit(X_rosrus, y_rosrus)"
    ]
   },
   {
@@ -374,15 +398,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "joblib.dump(study, 'study_rf_tuned_rus.pkl')\n",
-    "joblib.dump(tuned_rf_rus, 'rf_tuned_RUS.joblib')"
+    "joblib.dump(study, 'study_rf_tuned_rosrus.pkl')\n",
+    "joblib.dump(tuned_rf_rosrus, 'rf_tuned_ROSRUS.joblib')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Tuned TabNet model on RUS data"
+    "## Tuned TabNet model on ROS+RUS data"
    ]
   },
   {
@@ -411,8 +435,11 @@
     "        X_train_fold, X_val_fold = X_train.iloc[train_index], X_train.iloc[val_index]\n",
     "        y_train_fold, y_val_fold = y_train[train_index], y_train[val_index]\n",
     "\n",
+    "        ros = RandomOverSampler(random_state=random_state)\n",
+    "        X_ros, y_ros = ros.fit_resample(X_train_fold, y_train_fold)\n",
+    "\n",
     "        rus = RandomUnderSampler(random_state=random_state)\n",
-    "        X_rus, y_rus = rus.fit_resample(X_train_fold, y_train_fold)\n",
+    "        X_rus, y_rus = rus.fit_resample(X_ros, y_ros)\n",
     "\n",
     "        model_tabnetClass.fit(X_train = X_rus.values,\n",
     "                              y_train = y_rus,\n",
@@ -437,7 +464,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "study = optuna.create_study(direction=\"maximize\", study_name='TabNet Tuned RUS', sampler=TPESampler(seed=random_state))\n",
+    "study = optuna.create_study(direction=\"maximize\", study_name='TabNet Tuned ROS+RUS', sampler=TPESampler(seed=random_state))\n",
     "study.optimize(objective_tabnet, n_trials=20, show_progress_bar=True, gc_after_trial=True)"
    ]
   },
@@ -447,7 +474,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tabnet_best_params = study.best_params #{'n_d': 64, 'n_steps': 2, 'gamma': 1.4, 'n_shared': 5, 'lambda_sparse': 1e-06}\n",
+    "tabnet_best_params = study.best_params #\n",
     "print(tabnet_best_params)"
    ]
   },
@@ -467,7 +494,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"./Images/Tuned models on RUS data/TabNet/Optuna trial optimization history.png\">"
+    "<img src=\"./Images/Tuned models on ROSRUS data/TabNet/Optuna trial optimization history.png\">"
    ]
   },
   {
@@ -476,11 +503,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rus = RandomUnderSampler(random_state=random_state)\n",
-    "X_rus, y_rus = rus.fit_resample(X_train, y_train)\n",
+    "rosrus_pipeline = Pipeline(\n",
+    "    [\n",
+    "        (\"ros\", RandomOverSampler(random_state=random_state)),\n",
+    "        (\"rus\", RandomUnderSampler(random_state=random_state))\n",
+    "    ]\n",
+    ")\n",
     "\n",
-    "tabnet_tuned_rus = TabNetClassifier(**tabnet_best_params, seed=random_state, verbose=2, optimizer_params=dict(lr=2e-2, weight_decay=1e-5), n_a=tabnet_best_params[\"n_d\"], device_name=\"cuda\")\n",
-    "tabnet_tuned_rus.fit(X_rus.values, y_rus, max_epochs=4, batch_size=44000, virtual_batch_size=44000)"
+    "X_rosrus, y_rosrus = rosrus_pipeline.fit_resample(X_train, y_train)\n",
+    "tabnet_tuned_rosrus = TabNetClassifier(**tabnet_best_params, seed=random_state, verbose=2, optimizer_params=dict(lr=2e-2, weight_decay=1e-5), n_a=tabnet_best_params[\"n_d\"], device_name=\"cuda\")\n",
+    "tabnet_tuned_rosrus.fit(X_rosrus.values, y_rosrus, max_epochs=4, batch_size=44000, virtual_batch_size=44000)"
    ]
   },
   {
@@ -489,8 +521,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "joblib.dump(study, 'study_tabnet_tuned_rus.pkl')\n",
-    "torch.save(tabnet_tuned_rus, 'TabNet_tuned_RUS.pt')"
+    "joblib.dump(study, 'study_tabnet_tuned_rosrus.pkl')\n",
+    "torch.save(tabnet_tuned_rosrus, 'TabNet_tuned_ROSRUS.pt')"
    ]
   }
  ],
