--- a/_1. Data Preprocessing/3. Splitting and encoding.ipynb
+++ b/_1. Data Preprocessing/3. Splitting and encoding.ipynb
@@ -1664,6 +1664,15 @@
     "X_test_scaled_df.to_csv(path_import_and_export + \"ontime_reporting_X_test.csv\", index=False)\n",
     "y_test.to_csv(path_import_and_export + \"ontime_reporting_y_test.csv\", index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_test.to_csv(path_import_and_export + \"ontime_reporting_X_test_unscaled.csv\", index=False)"
+   ]
   }
  ],
  "metadata": {
