--- a/_2. Modeling/3. tuned_ROS+RUS_models.ipynb
+++ b/_2. Modeling/3. tuned_ROS+RUS_models.ipynb
@@ -314,7 +314,7 @@
    "source": [
     "def objective_rf(trial):\n",
     "    params = {\n",
-    "        \"max_depth\": trial.suggest_int(\"max_depth\", 5, 20),\n",
+    "        \"max_depth\": trial.suggest_int(\"max_depth\", 3, 20),\n",
     "        \"min_samples_leaf\": trial.suggest_int(\"min_samples_leaf\", 5, 9),\n",
     "        \"min_samples_split\": trial.suggest_int(\"min_samples_split\", 2, 10),\n",
     "        \"n_estimators\": trial.suggest_int(\"n_estimators\", 150, 350, step=50),\n",
@@ -423,6 +423,7 @@
     "        \"gamma\": trial.suggest_float(\"gamma\", 1.0, 2.0, step=0.01),\n",
     "        \"n_shared\": trial.suggest_int(\"n_shared\", 1, 5),\n",
     "        \"lambda_sparse\": trial.suggest_categorical(\"lambda_sparse\", [1e-6, 1e-5, 1e-4, 1e-3, 1e-2, 1e-1]),\n",
+    "        #\"mask_type\": trial.suggest_categorical(\"mask_type\", [\"sparsemax\", \"entmax\"])\n",
     "    }\n",
     "\n",
     "    model_tabnetClass = TabNetClassifier(**params, seed=random_state, verbose=2, optimizer_params=dict(lr=2e-2, weight_decay=1e-5), n_a=params[\"n_d\"], device_name=\"cuda\") #device_name=\"cuda\"\n",
