--- a/_2. Modeling/3. tuned_ROS+RUS_models.ipynb
+++ b/_2. Modeling/3. tuned_ROS+RUS_models.ipynb
@@ -351,7 +351,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rf_best_params = study.best_params #\n",
+    "rf_best_params = study.best_params #{'max_depth': 20, 'min_samples_leaf': 8, 'min_samples_split': 4, 'n_estimators': 300}\n",
     "print(rf_best_params)"
    ]
   },
