Results XGBoost ROSRUS

--- a/_2. Modeling/1. Baselines.ipynb
+++ b/_2. Modeling/1. Baselines.ipynb
@@ -28,7 +28,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#https://mikulskibartosz.name/how-to-reduce-memory-usage-in-pandas\n",
+    "#https://www.kaggle.com/code/yus002/logistic-regression-optuna-tuning\n",
+    "#Code used from the above author\n",
+    "#Helps to reduce size in memory of the data so that models can run faster\n",
     "\n",
     "def rm(df):\n",
     "    start_mem = df.memory_usage().sum() / 1024**2\n",
@@ -38,9 +40,7 @@
     "        if col_type != object:\n",
     "            c_min = df[col].min()\n",
     "            c_max = df[col].max()\n",
-    "            if c_min == 0 and c_max == 1:\n",
-    "                    df[col] = df[col].astype('bool')\n",
-    "            elif str(col_type)[:3] == 'int':\n",
+    "            if str(col_type)[:3] == 'int':\n",
     "                if c_min > np.iinfo(np.int8).min and c_max < np.iinfo(np.int8).max:\n",
     "                    df[col] = df[col].astype(np.int8)\n",
     "                elif c_min > np.iinfo(np.int16).min and c_max < np.iinfo(np.int16).max:\n",
@@ -164,7 +164,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rf_baseline = RandomForestClassifier(random_state=random_state, n_jobs=-1, max_depth=20)\n",
+    "rf_baseline = RandomForestClassifier(random_state=random_state, n_jobs=-1)\n",
     "rf_baseline.fit(X_train, y_train)\n",
     "joblib.dump(rf_baseline, path_model + 'rf_baseline.joblib') "
    ]
