--- a/_2. Modeling/3. tuned_ROS+RUS_models.ipynb
+++ b/_2. Modeling/3. tuned_ROS+RUS_models.ipynb
@@ -248,7 +248,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "xgboost_best_params = study.best_params #\n",
+    "xgboost_best_params = study.best_params #{'n_estimators': 300, 'learning_rate': 0.05, 'max_depth': 16, 'subsample': 0.9963878790586689, 'colsample_bytree': 0.8643206823312504, 'min_child_weight': 16}\n",
     "print(xgboost_best_params)"
    ]
   },
