Updated code structure

--- a/_2. Modeling/3. tuned_ROS+RUS_models.ipynb
+++ b/_2. Modeling/3. tuned_ROS+RUS_models.ipynb
@@ -475,7 +475,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tabnet_best_params = study.best_params #\n",
+    "tabnet_best_params = study.best_params #{'n_d': 24, 'n_steps': 2, 'gamma': 1.48, 'n_shared': 4, 'lambda_sparse': 0.0001}\n",
     "print(tabnet_best_params)"
    ]
   },
