--- a/_3. Evaluation/2. Tuned_Imbalance_eval.ipynb
+++ b/_3. Evaluation/2. Tuned_Imbalance_eval.ipynb
@@ -6,15 +6,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#! pip install plot-metric\n",
-    "import pickle\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "from sklearn.metrics import roc_auc_score, balanced_accuracy_score, confusion_matrix, recall_score, precision_score, f1_score, roc_curve\n",
-    "import matplotlib.pyplot as plt\n",
     "import torch\n",
     "import joblib\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from functions import auroc_curve, evaluation, rm\n",
     "\n",
+    "results = pd.DataFrame(columns=[\"Model\", \"AUROC\", \"Balanced Accuracy\", \"F1\", \"Recall\", \"Precision\"])\n",
     "path_csv = \"../../../Thesis_data/processed_data/\"\n",
     "path_model = \"../../../Thesis_data/Models/\""
    ]
@@ -25,90 +23,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#https://mikulskibartosz.name/how-to-reduce-memory-usage-in-pandas\n",
-    "\n",
-    "def rm(df):\n",
-    "    start_mem = df.memory_usage().sum() / 1024**2\n",
-    "    print('Memory usage of dataframe is {:.2f} MB'.format(start_mem))\n",
-    "    for col in df.columns:\n",
-    "        col_type = df[col].dtype\n",
-    "        if col_type != object:\n",
-    "            c_min = df[col].min()\n",
-    "            c_max = df[col].max()\n",
-    "            if str(col_type)[:3] == 'int':\n",
-    "                if c_min > np.iinfo(np.int8).min and c_max < np.iinfo(np.int8).max:\n",
-    "                    df[col] = df[col].astype(np.int8)\n",
-    "                elif c_min > np.iinfo(np.int16).min and c_max < np.iinfo(np.int16).max:\n",
-    "                    df[col] = df[col].astype(np.int16)\n",
-    "                elif c_min > np.iinfo(np.int32).min and c_max < np.iinfo(np.int32).max:\n",
-    "                    df[col] = df[col].astype(np.int32)\n",
-    "                elif c_min > np.iinfo(np.int64).min and c_max < np.iinfo(np.int64).max:\n",
-    "                    df[col] = df[col].astype(np.int64)\n",
-    "            else:\n",
-    "                if c_min > np.finfo(np.float16).min and c_max < np.finfo(np.float16).max:\n",
-    "                    df[col] = df[col].astype(np.float16)\n",
-    "                elif c_min > np.finfo(np.float32).min and c_max < np.finfo(np.float32).max:\n",
-    "                    df[col] = df[col].astype(np.float32)\n",
-    "                else:\n",
-    "                    df[col] = df[col].astype(np.float64)\n",
-    "\n",
-    "    end_mem = df.memory_usage().sum() / 1024**2\n",
-    "    print('Memory usage after optimization is: {:.2f} MB'.format(end_mem))\n",
-    "    print('Decreased by {:.1f}%'.format(100 * (start_mem - end_mem) / start_mem))\n",
-    "\n",
-    "    return df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "results = pd.DataFrame(columns=[\"Model\", \"AUROC\", \"Balanced Accuracy\", \"F1\", \"Recall\", \"Precision\"])\n",
-    "\n",
-    "def evaluation(y_test_input, y_pred_input, model_name, y_pred_proba_input):\n",
-    "\n",
-    "    auroc = round(roc_auc_score(y_test_input, y_pred_proba_input),3)\n",
-    "    bal_acc = round(balanced_accuracy_score(y_test_input, y_pred_input),3)\n",
-    "    f1 = round(f1_score(y_test_input, y_pred_input),3)\n",
-    "    recall = round(recall_score(y_test_input, y_pred_input),3)\n",
-    "    precis = round(precision_score(y_test_input, y_pred_input),3)\n",
-    "\n",
-    "    results.loc[len(results)+1] = [type(model_name).__name__, auroc, bal_acc, f1, recall, precis]\n",
-    "\n",
-    "    print(\"AUROC Score: \", auroc)\n",
-    "    print(\"Balanced Accuracy Score: \", bal_acc)\n",
-    "    print(\"F1 Score: \", f1)\n",
-    "    print(\"Recall Score: \", recall)\n",
-    "    print(\"Precision Score: \", precis)\n",
-    "    cm = confusion_matrix(y_test_input, y_pred_input)\n",
-    "\n",
-    "    fig, ax = plt.subplots(figsize=(4, 6))\n",
-    "    ax.matshow(cm, cmap=plt.cm.Blues, alpha=0.3)\n",
-    "    for i in range(cm.shape[0]):\n",
-    "        for j in range(cm.shape[1]):\n",
-    "            ax.text(x=j, y=i,s=cm[i, j], va='center', ha='center', size='xx-large')\n",
-    "    \n",
-    "    plt.xlabel('Predictions', fontsize=18)\n",
-    "    plt.ylabel('Actuals', fontsize=18)\n",
-    "    plt.title('Confusion Matrix', fontsize=18)\n",
-    "    plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "X_test = pd.read_csv(path_csv + \"ontime_reporting_X_test.csv\")\n",
     "y_test = pd.read_csv(path_csv + \"ontime_reporting_y_test.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +103,7 @@
     }
    ],
    "source": [
-    "evaluation(y_test, y_pred_logreg_tuned_imbalance, logreg_tuned_imbalance, y_pred_prob_logreg_tuned_imbalance)"
+    "evaluation(y_test, y_pred_logreg_tuned_imbalance, logreg_tuned_imbalance, y_pred_prob_logreg_tuned_imbalance, results)"
    ]
   },
   {
@@ -194,16 +115,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Rvanl\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\xgboost\\core.py:160: UserWarning: [16:23:12] WARNING: C:\\buildkite-agent\\builds\\buildkite-windows-cpu-autoscaling-group-i-0cec3277c4d9d0165-1\\xgboost\\xgboost-ci-windows\\src\\gbm\\gbtree.cc:385: Changing updater from `grow_gpu_hist` to `grow_quantile_histmaker`.\n",
+      "C:\\Users\\Rvanl\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\xgboost\\core.py:160: UserWarning: [14:22:44] WARNING: C:\\buildkite-agent\\builds\\buildkite-windows-cpu-autoscaling-group-i-0cec3277c4d9d0165-1\\xgboost\\xgboost-ci-windows\\src\\gbm\\gbtree.cc:385: Changing updater from `grow_gpu_hist` to `grow_quantile_histmaker`.\n",
       "  warnings.warn(smsg, UserWarning)\n",
-      "C:\\Users\\Rvanl\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\xgboost\\core.py:160: UserWarning: [16:23:12] WARNING: C:\\buildkite-agent\\builds\\buildkite-windows-cpu-autoscaling-group-i-0cec3277c4d9d0165-1\\xgboost\\xgboost-ci-windows\\src\\context.cc:44: No visible GPU is found, setting device to CPU.\n",
+      "C:\\Users\\Rvanl\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\xgboost\\core.py:160: UserWarning: [14:22:44] WARNING: C:\\buildkite-agent\\builds\\buildkite-windows-cpu-autoscaling-group-i-0cec3277c4d9d0165-1\\xgboost\\xgboost-ci-windows\\src\\context.cc:44: No visible GPU is found, setting device to CPU.\n",
       "  warnings.warn(smsg, UserWarning)\n"
      ]
     }
@@ -216,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +163,7 @@
     }
    ],
    "source": [
-    "evaluation(y_test, y_pred_xgb_tuned_imbalance, xgb_class_tuned_imbalance, y_pred_prob_xgb_tuned_imbalance)"
+    "evaluation(y_test, y_pred_xgb_tuned_imbalance, xgb_class_tuned_imbalance, y_pred_prob_xgb_tuned_imbalance, results)"
    ]
   },
   {
@@ -254,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +213,7 @@
     }
    ],
    "source": [
-    "evaluation(y_test, y_pred_tabnet_tuned_imbalance, tabnet_tuned_imbalance, y_pred_prob_tabnet_tuned_imbalance)"
+    "evaluation(y_test, y_pred_tabnet_tuned_imbalance, tabnet_tuned_imbalance, y_pred_prob_tabnet_tuned_imbalance, results)"
    ]
   },
   {
@@ -304,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -318,13 +239,13 @@
       "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
       "  warnings.warn(\n",
       "[Parallel(n_jobs=8)]: Using backend ThreadingBackend with 8 concurrent workers.\n",
-      "[Parallel(n_jobs=8)]: Done  25 tasks      | elapsed:    5.5s\n",
-      "[Parallel(n_jobs=8)]: Done 146 tasks      | elapsed:   24.9s\n",
-      "[Parallel(n_jobs=8)]: Done 250 out of 250 | elapsed:   39.7s finished\n",
+      "[Parallel(n_jobs=8)]: Done  25 tasks      | elapsed:    4.8s\n",
+      "[Parallel(n_jobs=8)]: Done 146 tasks      | elapsed:   21.7s\n",
+      "[Parallel(n_jobs=8)]: Done 250 out of 250 | elapsed:   35.7s finished\n",
       "[Parallel(n_jobs=8)]: Using backend ThreadingBackend with 8 concurrent workers.\n",
-      "[Parallel(n_jobs=8)]: Done  25 tasks      | elapsed:    5.2s\n",
-      "[Parallel(n_jobs=8)]: Done 146 tasks      | elapsed:   23.9s\n",
-      "[Parallel(n_jobs=8)]: Done 250 out of 250 | elapsed:   39.9s finished\n"
+      "[Parallel(n_jobs=8)]: Done  25 tasks      | elapsed:    4.1s\n",
+      "[Parallel(n_jobs=8)]: Done 146 tasks      | elapsed:   21.0s\n",
+      "[Parallel(n_jobs=8)]: Done 250 out of 250 | elapsed:   34.4s finished\n"
      ]
     }
    ],
@@ -336,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -362,12 +283,12 @@
     }
    ],
    "source": [
-    "evaluation(y_test, y_pred_rf_tuned_imbalanced, rf_tuned_imbalanced, y_pred_prob_rf_tuned_imbalanced)"
+    "evaluation(y_test, y_pred_rf_tuned_imbalanced, rf_tuned_imbalanced, y_pred_prob_rf_tuned_imbalanced, results)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +369,7 @@
        "1      LogisticRegression  0.739              0.663  0.473   0.377      0.634"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -483,40 +404,7 @@
     }
    ],
    "source": [
-    "#Plot AUROC for LogReg\n",
-    "fpr, tpr, _ = roc_curve(y_test, y_pred_prob_logreg_tuned_imbalance)\n",
-    "auc = round(roc_auc_score(y_test, y_pred_prob_logreg_tuned_imbalance), 3)\n",
-    "plt.plot(fpr, tpr, linestyle='--', label=\"Logistic Regression, AUC=\"+str(auc))\n",
-    "\n",
-    "#Plot AUROC for XGBoost\n",
-    "fpr, tpr, _ = roc_curve(y_test, y_pred_prob_xgb_tuned_imbalance)\n",
-    "auc = round(roc_auc_score(y_test, y_pred_prob_xgb_tuned_imbalance), 3)\n",
-    "plt.plot(fpr, tpr, linestyle='--', label=\"Gradient Boosting, AUC=\"+str(auc))\n",
-    "\n",
-    "#Plot AUROC for TabNet\n",
-    "fpr, tpr, _ = roc_curve(y_test, y_pred_prob_tabnet_tuned_imbalance)\n",
-    "auc = round(roc_auc_score(y_test, y_pred_prob_tabnet_tuned_imbalance), 3)\n",
-    "plt.plot(fpr, tpr, linestyle='--', label=\"TabNet, AUC=\"+str(auc))\n",
-    "\n",
-    "#Plot AUROC for Random Forests\n",
-    "fpr, tpr, _ = roc_curve(y_test, y_pred_prob_rf_tuned_imbalanced)\n",
-    "auc = round(roc_auc_score(y_test, y_pred_prob_rf_tuned_imbalanced), 3)\n",
-    "plt.plot(fpr, tpr, linestyle='--', label=\"Random Forests, AUC=\"+str(auc))\n",
-    "\n",
-    "#Add baseline of 0.5 random guesser\n",
-    "plt.plot([0, 1], [0, 1], color='gray')\n",
-    "\n",
-    "#Add legend\n",
-    "plt.legend()\n",
-    "\n",
-    "#Add labels and title\n",
-    "plt.xlabel('False Positive Rate')\n",
-    "plt.ylabel('True Positive Rate')\n",
-    "plt.title('Receiver Operating Characteristic (ROC) Curve')\n",
-    "\n",
-    "\n",
-    "plt.figure(figsize=(14, 12)) \n",
-    "plt.show()"
+    "auroc_curve(y_test, y_pred_prob_logreg_tuned_imbalance, y_pred_prob_xgb_tuned_imbalance, y_pred_prob_tabnet_tuned_imbalance, y_pred_prob_rf_tuned_imbalanced)"
    ]
   }
  ],
