--- a/_3. Evaluation/4. Disparate_group_analysis.ipynb
+++ b/_3. Evaluation/4. Disparate_group_analysis.ipynb
@@ -10,49 +10,10 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "from functions import rm\n",
     "\n",
     "path_csv = \"../../../Thesis_data/processed_data/\"\n",
     "path_model = \"../../../Thesis_data/Models/\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#https://mikulskibartosz.name/how-to-reduce-memory-usage-in-pandas\n",
-    "\n",
-    "def rm(df):\n",
-    "    start_mem = df.memory_usage().sum() / 1024**2\n",
-    "    print('Memory usage of dataframe is {:.2f} MB'.format(start_mem))\n",
-    "    for col in df.columns:\n",
-    "        col_type = df[col].dtype\n",
-    "        if col_type != object:\n",
-    "            c_min = df[col].min()\n",
-    "            c_max = df[col].max()\n",
-    "            if str(col_type)[:3] == 'int':\n",
-    "                if c_min > np.iinfo(np.int8).min and c_max < np.iinfo(np.int8).max:\n",
-    "                    df[col] = df[col].astype(np.int8)\n",
-    "                elif c_min > np.iinfo(np.int16).min and c_max < np.iinfo(np.int16).max:\n",
-    "                    df[col] = df[col].astype(np.int16)\n",
-    "                elif c_min > np.iinfo(np.int32).min and c_max < np.iinfo(np.int32).max:\n",
-    "                    df[col] = df[col].astype(np.int32)\n",
-    "                elif c_min > np.iinfo(np.int64).min and c_max < np.iinfo(np.int64).max:\n",
-    "                    df[col] = df[col].astype(np.int64)\n",
-    "            else:\n",
-    "                if c_min > np.finfo(np.float16).min and c_max < np.finfo(np.float16).max:\n",
-    "                    df[col] = df[col].astype(np.float16)\n",
-    "                elif c_min > np.finfo(np.float32).min and c_max < np.finfo(np.float32).max:\n",
-    "                    df[col] = df[col].astype(np.float32)\n",
-    "                else:\n",
-    "                    df[col] = df[col].astype(np.float64)\n",
-    "\n",
-    "    end_mem = df.memory_usage().sum() / 1024**2\n",
-    "    print('Memory usage after optimization is: {:.2f} MB'.format(end_mem))\n",
-    "    print('Decreased by {:.1f}%'.format(100 * (start_mem - end_mem) / start_mem))\n",
-    "\n",
-    "    return df"
    ]
   },
   {
