--- a/_2. Modeling/1. Baselines.ipynb
+++ b/_2. Modeling/1. Baselines.ipynb
@@ -15,53 +15,12 @@
     "from pytorch_tabnet.tab_model import TabNetClassifier\n",
     "import xgboost as xgb\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
+    "from functions import rm\n",
     "\n",
     "random_state = 101\n",
     "\n",
     "path_csv = \"../../../Thesis_data/processed_data/\"\n",
     "path_model = \"../../../Thesis_data/Models/\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#https://www.kaggle.com/code/yus002/logistic-regression-optuna-tuning\n",
-    "#Code used from the above author\n",
-    "#Helps to reduce size in memory of the data so that models can run faster\n",
-    "\n",
-    "def rm(df):\n",
-    "    start_mem = df.memory_usage().sum() / 1024**2\n",
-    "    print('Memory usage of dataframe is {:.2f} MB'.format(start_mem))\n",
-    "    for col in df.columns:\n",
-    "        col_type = df[col].dtype\n",
-    "        if col_type != object:\n",
-    "            c_min = df[col].min()\n",
-    "            c_max = df[col].max()\n",
-    "            if str(col_type)[:3] == 'int':\n",
-    "                if c_min > np.iinfo(np.int8).min and c_max < np.iinfo(np.int8).max:\n",
-    "                    df[col] = df[col].astype(np.int8)\n",
-    "                elif c_min > np.iinfo(np.int16).min and c_max < np.iinfo(np.int16).max:\n",
-    "                    df[col] = df[col].astype(np.int16)\n",
-    "                elif c_min > np.iinfo(np.int32).min and c_max < np.iinfo(np.int32).max:\n",
-    "                    df[col] = df[col].astype(np.int32)\n",
-    "                elif c_min > np.iinfo(np.int64).min and c_max < np.iinfo(np.int64).max:\n",
-    "                    df[col] = df[col].astype(np.int64)\n",
-    "            else:\n",
-    "                if c_min > np.finfo(np.float16).min and c_max < np.finfo(np.float16).max:\n",
-    "                    df[col] = df[col].astype(np.float16)\n",
-    "                elif c_min > np.finfo(np.float32).min and c_max < np.finfo(np.float32).max:\n",
-    "                    df[col] = df[col].astype(np.float32)\n",
-    "                else:\n",
-    "                    df[col] = df[col].astype(np.float64)\n",
-    "\n",
-    "    end_mem = df.memory_usage().sum() / 1024**2\n",
-    "    print('Memory usage after optimization is: {:.2f} MB'.format(end_mem))\n",
-    "    print('Decreased by {:.1f}%'.format(100 * (start_mem - end_mem) / start_mem))\n",
-    "\n",
-    "    return df"
    ]
   },
   {
